Style CSS custom

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,37 +1,102 @@
-
 <div class="container">
-  <p>Basic Table Grid</p>
+  <div class="title">
+    <p>Basic Table Grid</p>
+  </div>
 
-<div class="mat-elevation-z8">
-  <table mat-table [dataSource]="datasource">
+  <form class="example-form" [formGroup]="form">
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Nome</mat-label>
+      <input
+        type="text"
+        matInput
+        formControlName="Nome"
+        [errorStateMatcher]="matcher"
+        placeholder="Ex. Pablo"
+      />
+      <mat-error *ngIf="form.hasError('email') && !form.hasError('required')">
+        Digite um nome
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>SobreNome</mat-label>
+      <input
+        type="text"
+        matInput
+        formControlName="SobreNome"
+        [errorStateMatcher]="matcher"
+        placeholder="Ex. Vittar"
+      />
 
-    <ng-container matColumnDef="Nome">
-      <th mat-header-cell *matHeaderCellDef> Nome </th>
-      <td mat-cell *matCellDef="let element"> {{element.Nome}} </td>
-    </ng-container>
+      <mat-error *ngIf="form.hasError('required')">
+        Idade é <strong>Obrigatória!</strong>
+      </mat-error>
+    </mat-form-field>
 
-    <ng-container matColumnDef="SobreNome">
-      <th mat-header-cell *matHeaderCellDef> SobreNome </th>
-      <td mat-cell *matCellDef="let element"> {{element.SobreNome}} </td>
-    </ng-container>
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Idade</mat-label>
+      <input
+        type="number"
+        matInput
+        formControlName="Idade"
+        [errorStateMatcher]="matcher"
+        placeholder="Ex. 19"
+      />
+      <mat-error *ngIf="form.hasError('required')">
+        Digite sua Idade!
+      </mat-error>
+    </mat-form-field>
 
-    <ng-container matColumnDef="Idade">
-      <th mat-header-cell *matHeaderCellDef> Idade</th>
-      <td mat-cell *matCellDef="let element"> {{element.Idade}} </td>
-    </ng-container>
+    <mat-form-field class="example-full-width" appearance="fill">
+    <mat-label>Saldo</mat-label>
+    <input
+      type="text"
+      matInput
+      formControlName="Saldo"
+      [errorStateMatcher]="matcher"
+      placeholder="Ex. R$ 1000"
+    />
+    <span matPrefix>$&nbsp;</span>
+    <span matSuffix>.00</span>
+    <mat-error *ngIf="form.hasError('email') && !form.hasError('required')">
+      Digite seu saldo bancario
+    </mat-error></mat-form-field>
 
-    <ng-container matColumnDef="Saldo">
-      <th mat-header-cell *matHeaderCellDef> Saldo </th>
-      <td mat-cell *matCellDef="let element"> {{element.Saldo | currency}} </td>
-    </ng-container>
+    <button mat-raised-button color="warn" (click)="postData()">Enviar</button>
+  </form>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="datasource">
+      <ng-container matColumnDef="Nome">
+        <th mat-header-cell *matHeaderCellDef>Nome</th>
+        <td mat-cell *matCellDef="let element">{{ element.Nome }}</td>
+      </ng-container>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                 showFirstLastButtons
-                 aria-label="Select page of periodic elements">
-  </mat-paginator>
-</div>
+      <ng-container matColumnDef="SobreNome">
+        <th mat-header-cell *matHeaderCellDef>SobreNome</th>
+        <td mat-cell *matCellDef="let element">{{ element.SobreNome }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Idade">
+        <th mat-header-cell *matHeaderCellDef>Idade</th>
+        <td mat-cell *matCellDef="let element">{{ element.Idade }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Saldo">
+        <th mat-header-cell *matHeaderCellDef>Saldo</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.Saldo | currency }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 20]"
+      showFirstLastButtons
+      aria-label="Select page of periodic elements"
+    >
+    </mat-paginator>
+  </div>
 </div>
