--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -67,37 +67,37 @@
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="datasource">
 
-      <ng-container matColumnDef="Id">
+      <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>Numero</th>
-        <td mat-cell *matCellDef="let element">{{ element.Id }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="Nome">
+      <ng-container matColumnDef="nome">
         <th mat-header-cell *matHeaderCellDef>Nome</th>
-        <td mat-cell *matCellDef="let element">{{ element.Nome }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="SobreNome">
+      <ng-container matColumnDef="sobrenome">
         <th mat-header-cell *matHeaderCellDef>SobreNome</th>
-        <td mat-cell *matCellDef="let element">{{ element.SobreNome }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.sobrenome }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="Idade">
+      <ng-container matColumnDef="idade">
         <th mat-header-cell *matHeaderCellDef>Idade</th>
-        <td mat-cell *matCellDef="let element">{{ element.Idade }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.idade }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="Saldo">
+      <ng-container matColumnDef="saldo">
         <th mat-header-cell *matHeaderCellDef>Saldo</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.Saldo | currency }}
+          {{ element.saldo | currency }}
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="Actions">
-        <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>actions</th>
         <td mat-cell *matCellDef="let element">
-          <button (click)="deleteById(element.Id)">Delete</button>
+          <button (click)="deleteById(element.id)">Delete</button>
         </td>
       </ng-container>
 
@@ -105,11 +105,5 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
 
-    <mat-paginator
-      [pageSizeOptions]="[5, 10, 20]"
-      showFirstLastButtons
-      aria-label="Select page of periodic elements"
-    >
-    </mat-paginator>
   </div>
 </div>
